@@ -1,3 +1,15 @@
+2003-11-15  Wakaba  <wakaba@suika.fam.cx>
+
+	* Error.pm: Use Message::Util::Formatter::Text to construct error messages.
+
+2003-11-13  Wakaba  <wakaba@suika.fam.cx>
+
+	* Formatter: New directory.
+
+2003-11-12  Wakaba  <wakaba@suika.fam.cx>
+
+	* Error.pm: Rewritten.
+
 2003-10-25  Wakaba  <wakaba@suika.fam.cx>
 
 	* Formatter.pm (replace): Allow '%foo () ;'.
